k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-inference-ingress
spec:
  rules:
  - host: ml-inference.example.com # use your domain here
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ml-inference-service
            port:
              number: 80
